[#3] Cleanups